# chronogrammer

./: .gitignore  README.md  pyproject.toml
src/chronogrammer/: __init__.py  cli.py  generator.py  scorer.py  search.py  semantic.py
tests/: test_cli.py  test_generator.py  test_scorer.py  test_search.py
